--- a/main.html
+++ b/main.html
@@ -16,7 +16,6 @@
   /* required file for gridstack to work */
 @import "https://cdn.jsdelivr.net/npm/gridstack@1.1.1/dist/gridstack.min.css";
 
-/* Optional styles for demos */
 .btn-primary {
   color: #fff;
   background-color: #007bff;
@@ -93,7 +92,7 @@ h1 {
     <h1>Two grids demo</h1>
 
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="sidebar">
           
           <!-- will size to fit content -->
@@ -103,22 +102,15 @@ h1 {
 
         </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-2">
         <div class="trash">
         </div>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-6">
-        <a onClick="toggleFloat(this, 0)" class="btn btn-primary" href="#">float: false</a>
-        <a onClick="compact(0)" class="btn btn-primary" href="#">Compact</a>
         <div class="grid-stack grid-stack-6">
-        </div>
       </div>
-      <div class="col-md-6">
-        <a onClick="toggleFloat(this, 1)" class="btn btn-primary" href="#">float: true</a>
-        <a onClick="compact(1)" class="btn btn-primary" href="#">Compact</a>
+      <div class="col-md-8">
+        <a onClick="toggleFloat(this, 1)" class="btn btn-primary btn-sm" href="#">float: true</a>
+        <a onClick="compact(1)" class="btn btn-primary btn-sm" href="#">Compact</a>
         <div class="grid-stack grid-stack-6">
           </div>
       </div>
