--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -89,13 +88,16 @@ h1 {
 </head>
 <body>
   <div class="container-fluid">
-    <h1>Two grids demo</h1>
+    <h1>Test Grid</h1>
 
     <div class="row">
       <div class="col-md-2">
         <div class="sidebar">
           
           <!-- will size to fit content -->
+          <div class="grid-stack-item">
+            <div class="grid-stack-item-content">Drag me</div>
+          </div>
           <div class="grid-stack-item">
             <div class="grid-stack-item-content">Drag me</div>
           </div>
@@ -151,6 +153,7 @@ h1 {
     });
 
     // TODO: switch jquery-ui out
+	
     $('.sidebar .grid-stack-item').draggable({
       revert: 'invalid',
       handle: '.grid-stack-item-content',
